.jjconflict-side-1/apps/servarr/whisparr/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: whisparr
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prowlarr
      ports:
        - port: https
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: whisparr
      app.kubernetes.io/name: whisparr
  policyTypes:
    - Ingress
